--- a/index1.html
+++ b/index1.html
@@ -4,9 +4,15 @@
   <meta charset="UTF-8">
   <title>Дом Наркомфина</title>
 </head>
+<style>
+  *{
+    color:red
+  }
+</style>
 <body>
-<h1>Дом Наркомфина</h1>
-<p>Дом Наркомфина — жилой дом «переходного типа», построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.</p>
+<h1 style="font-size: 60px">Дом Наркомфина</h1>
+
+<p>Дом Наркомфина — жилой дом «переходного типа», построенный в <a href="https://ru.wikipedia.org/wiki/1930_%D0%B3%D0%BE%D0%B4"target="blank">1930 году</a> по проекту архитекторов <a href="https://ru.wikipedia.org/wiki/%D0%93%D0%B8%D0%BD%D0%B7%D0%B1%D1%83%D1%80%D0%B3,_%D0%9C%D0%BE%D0%B8%D1%81%D0%B5%D0%B9_%D0%AF%D0%BA%D0%BE%D0%B2%D0%BB%D0%B5%D0%B2%D0%B8%D1%87" target="_blank">Моисея Гинзбурга</a> и <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B8%D0%BB%D0%B8%D0%BD%D0%B8%D1%81,_%D0%98%D0%B3%D0%BD%D0%B0%D1%82%D0%B8%D0%B9_%D0%A4%D1%80%D0%B0%D0%BD%D1%86%D0%B5%D0%B2%D0%B8%D1%87">Игнатия Милиниса</a> для работников <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%B0%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D0%B9_%D0%BA%D0%BE%D0%BC%D0%B8%D1%81%D1%81%D0%B0%D1%80%D0%B8%D0%B0%D1%82_%D1%84%D0%B8%D0%BD%D0%B0%D0%BD%D1%81%D0%BE%D0%B2_%D0%A1%D0%A1%D0%A1%D0%A0">Народного комиссариата финансов СССР (Наркомфина)</a>. Находится в Москве на <a href="https://ru.wikipedia.org/wiki/%D0%9D%D0%BE%D0%B2%D0%B8%D0%BD%D1%81%D0%BA%D0%B8%D0%B9_%D0%B1%D1%83%D0%BB%D1%8C%D0%B2%D0%B0%D1%80">Новинском бульваре</a> по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры <a href="https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D0%BD%D1%81%D1%82%D1%80%D1%83%D0%BA%D1%82%D0%B8%D0%B2%D0%B8%D0%B7%D0%BC_(%D0%B8%D1%81%D0%BA%D1%83%D1%81%D1%81%D1%82%D0%B2%D0%BE)">конструктивизма</a>.</p>
 <p>Здание находится в аварийном состоянии и уже трижды включалось в список «100 главных зданий мира, которым грозит уничтожение»[1].</p>
 
 <h2>Содержание</h2>
@@ -24,8 +30,11 @@
       <li>
       <a href="#c">Пространственная организация жилого комплекса</a>
       </li>
-      <li>Архитектура жилого дома</li>
-      <li>Проектные и технологические решения дома Наркомфина</li>
+      <li>
+        <a href="#d">Архитектура жилого дома</a>
+      </li>
+      <li>
+        <a href="#e">Проектные и технологические решения дома Наркомфина</a></li>
       <li>Нарушение концептуального замысла и проектных решений после окончания строительства</li>
     </ul>
   <li>Критика проекта</li>
@@ -41,7 +50,7 @@
 </ol>
 
 <h2 id="a">История создания</h2>
-<p>В конце 1925 года была образована творческая организация конструктивистов, названная Объединением современных архитекторов (ОСА). Организация издавала журнал «Современная архитектура», который выходил регулярно шесть раз в год в течение пяти лет — с 1926 по 1930 год. Ответственными редакторами журнала были М. Я. Гинзбург (1892—1946), один из идеологов советского конструктивизма, и А. А. Веснин. ОСА оказала значительное влияние на развитие теоретической архитектурной мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса на Новинском бульваре. Проект Дома Наркомфина был разработан Моисеем Гинзбургом в соавторстве с архитектором Игнатием Милинисом (1899—1974) и инженером Сергеем Прохоровым.</p>
+<p>В конце 1925 года была образована творческая организация конструктивистов, названная <a href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов (ОСА)</a>. Организация издавала журнал «Современная архитектура», который выходил регулярно шесть раз в год в течение пяти лет — с 1926 по 1930 год. Ответственными редакторами журнала были М. Я. Гинзбург (1892—1946), один из идеологов советского конструктивизма, и А. А. Веснин. ОСА оказала значительное влияние на развитие теоретической архитектурной мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса на Новинском бульваре. Проект Дома Наркомфина был разработан Моисеем Гинзбургом в соавторстве с архитектором Игнатием Милинисом (1899—1974) и инженером Сергеем Прохоровым.</p>
 
 <h2 id="b">Идеология</h2>
 <p>Несмотря на то, что дом Наркомата финансов часто именуется «домом-коммуной», автор проекта М. Гинзбург считал его домом переходного типа (от «буржуазного» дома к «социалистической» коммуне), поскольку в нём не полностью уничтожалась семейная структура, как это предполагалось в домах-коммунах. Называя его так, Гинзбург имел в виду, что обитатели оценят удобства общественного обслуживания и постепенно перейдут к новому бытовому укладу[2].</p>
@@ -58,7 +67,7 @@
 <p>Основной объём жилого дома Гинзбург расположил на территории двух усадебных садов, отмечая в пояснительной записке к проекту, что «в виду неровности участка, вызывающего в подобных случаях устройство большой поверхности цоколя, в настоящем случае дом поднят в большей своей части на высоту 2,5 метров на отдельных столбах, что является более экономичным и, кроме того, сохраняет нетронутой площадь парка»[4].</p>
 <p>Функциональные характеристики будущего здания были определены техническим заданием, составленным Николаем Милютиным, который в указанные годы (1924—1929) исполнял обязанности наркома финансов РСФСР и выступал в качестве заказчика жилого комплекса. Сметная стоимость строительства составила 10 млн рублей[5].</p>
 
-<h2>Архитектура жилого дома</h2>
+<h2 id="d">Архитектура жилого дома</h2>
 <p>Подлинным новаторством для конца 1920-х годов была архитектура жилого корпуса. Она была настолько необычна и впечатляюща[6], что лишь немногие смогли увидеть в ней образ жилого дома будущего, черты которого он, безусловно, содержал.</p>
 <p>Жилой корпус представляет собой шестиэтажное здание длиной 85 м и высотой 17 м. Ориентация здания на запад и восток. В торцах здания расположены лестничные клетки, всего две на всю длину. Первый этаж, высотой 2,5 метра, состоит из круглых столбов — элементов каркаса здания, что было связано со стремлением сохранить парковую территорию и с убеждённостью Гинзбурга в том, что первые этажи менее пригодны для жилья.</p>
 <p>За счет колонн первого этажа и открытого пространства между ними создавалось зрительное впечатление, что корпус как бы приподнят над землей. Это, вместе с надстройкой-мостиком на плоской крыше и белоснежным цветом фасадов, придавало ему сходство с кораблем, что и закрепилось в неофициальном названии дома — «дом-корабль» или, по Е. Милютиной, «дом-пароход».</p>
@@ -80,7 +89,7 @@
 <p>Принцип компоновки жилых ячеек, подобный применённому в проекте дома Наркомфина, был реализован в ряде проектов и на Западе, в частности, в построенном в Бреслау (Вроцлаве) по проекту Ганса Шаруна общежитии для холостых (1929 год). Наличие коридора, обслуживающего несколько уровней, характерно для жилых единиц Ле Корбюзье[9].</p>
 <p>Обследование дома Наркомфина, проведенное в 1994 году профессором МАрхИ Еленой Овсянниковой и швейцарскими студентами из Женевы, которыми руководил Жан-Клод Люди, показало, что его внутренняя структура оказалась ещё сложнее, чем было заявлено в проекте. Нестандартные квартиры, как оказалось, были на каждом этаже, хотя большинство их — типовые. Общее число вариантов жилых ячеек могло доходить до одиннадцати (включая помещение для консьержа, «студию» на верхнем этаже, общежитие на кровле и пентхаус самого Милютина). Характерно, что в конце коридора пятого этажа находилась общая кухня, организованная уже в 1940-е годы, а из самого коридора был доступ в чуланы для хранения вещей, не всегда помещавшихся в ячейки «F».</p>
 
-<h2>Проектные и технологические решения дома Наркомфина</h2>
+<h2 id="e">Проектные и технологические решения дома Наркомфина</h2>
 <p>Дом был возведен в 1928—1930 годах с применением новинок тогдашней строительной индустрии, в том числе цельнолитого железобетона (выдержавшего впоследствии и бомбежки и многолетнее отсутствие ремонта), а также новых материалов. Он построен на колоннах, это висячая (каркасная) конструкция, что создает устойчивость при оползнях и колебаниях почвы — под домом течет подземная река Синичка, заключенная в трубу[5]. Несущий каркас с сеткой круглых в плане колонн диаметром 350 мм связан в продольном и поперечном направлениях железобетонными прогонами. Наружные стены, являющиеся по сути облегченными термоизоляционными щитами[10], отнесены на консолях от колонн каркаса, в результате чего колонны оказываются внутри здания. Технологические решения плоской кровли с системой водостоков, теплоизоляцией «торфоплитами» из прессованного торфа и гидроизоляцией битумом следовали схеме, разработанной ведущим германским специалистом по плоским крышам Эрнстом Маем.</p>
 <p>В доме Наркомфина в 1929 году был проведен эксперимент по цветовому решению квартир, которым руководил специалист из Баухауса профессор Хиннерк Шепер. Шепер выполнил цветовое оформление интерьеров дома, для чего был на год откомандирован в Москву[7]. Стены в квартирах не оклеивались обоями, а гладко окрашивались — теплые гаммы колеров для одних квартир и холодные для других. Теплая гамма была основана на оттенках жёлтого и охры, холодная — голубого и серого. Обе были реализованы в двух вариантах: сначала в сильной, а потом слабой насыщенностью колеров. Образцы эскизов цветового решения интерьеров типовых квартир дома Наркомфина по Шеперу представлены в книге Е. Овсянниковой и Е. Милютиной Жилой комплекс «Дом Наркомфина», Екатеринбург: Tatlin, 2015 — 64 с.</p>
 <p>Важную роль в сооружении комплекса сыграл инженер Сергей Львович Прохоров (1899—1974). Согласно предложенному Прохоровым решению, железобетонный каркас здания, несущие стены из блоков, а также водостоки и вентиляционные вытяжки был размещены внутри здания; снаружи были расположены лёгкие несущие стены и ленточные окна. Прохоров создал несколько новых материалов (фибролит, ксилолит, торфоплиты и камышит) и организовал производство шлакоблоков («бетонитовых камней») прямо на стройплощадке[11]. По мнению профессора МАрхИ Елены Овсянниковой, без участия этого инженера, хорошо освоившего немецкую технологию изготовления цементных блоков и предложившего ряд нововведений по ходу строительства, Дом Наркомфина не удалось бы построить столь успешно[3].</p>
