--- a/narkomfin.html
+++ b/narkomfin.html
@@ -171,7 +171,18 @@
 
 <script type="text/javascript"src="javascripts/jquery-3.2.1.js"></script>
 <script type="text/javascript">
-  
+$(function() {
+$('.sidebar a').each(function() {
+  $(this).on('click', function(e) {
+    e.preventDefault();
+    var scrollTo = $(this).attr('href');
+    var whitespace = scrollTo == '#s1' ? 70 : 30
+    $('html,body').animate({
+      scrollTop: $(scrollTo).offset().top - whitespace
+    }, 1000);
+  });
+});
+});
 </script>
 
 </body>
