--- a/narkomfin.html
+++ b/narkomfin.html
@@ -8,6 +8,12 @@
   <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+
+  <nav class="Menubar">
+    <a  class="logo"></a>
+    <a  class="about">О проекте</a>
+  </nav>
+
   <nav class="sidebar">
 
   <ul>
