исправлен баг со слайдером

--- a/narkomfin.html
+++ b/narkomfin.html
@@ -53,8 +53,8 @@
 
 <section class="gallery">
   <nav class="galleryNav">
-    <div class="galleryNavItem"id="prev"></div>
-    <div class="disabled galleryNavItem"id="next"></div>
+    <div class="disabled galleryNavItem"id="prev"></div>
+    <div class="galleryNavItem"id="next"></div>
   </nav>
   <section class="galleryRail">
 <figure>
