--- a/narkomfin.html
+++ b/narkomfin.html
@@ -77,6 +77,10 @@
   <h2 id="s2">История создания</h2>
   <p>Дом Наркомфина построен по проекту одного из идеологов советского конструктивизма Моисея Гинзбурга, в соавторстве с архитектором Игнатием Милинисом и инженером Сергеем Прохоровым. Ранее, в конце 1925 года была образована творческая организация конструктивистов, названная <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9E%D0%B1%D1%8A%D0%B5%D0%B4%D0%B8%D0%BD%D0%B5%D0%BD%D0%B8%D0%B5_%D1%81%D0%BE%D0%B2%D1%80%D0%B5%D0%BC%D0%B5%D0%BD%D0%BD%D1%8B%D1%85_%D0%B0%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D0%BE%D1%80%D0%BE%D0%B2">Объединением современных архитекторов</a> (ОСА). Эта организация оказала значительное влияние на развитие теоретической мысли и ряд наработанных в ней решений позднее был использован при строительстве жилого комплекса.</p>
 
+<iframe width="560" height="315"
+ src="https://www.youtube.com/embed/NMllaxuWp94" frameborder="0"
+ allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
   <h2 id="s3">Идеология</h2>
   <p>Несмотря на то, что дом Наркомата финансов часто именуется «домом-коммуной», автор проекта М. Гинзбург считал его «домом переходного типа» (от «буржуазного» дома к «социалистической» коммуне), поскольку в нём не полностью уничтожалась семейная структура, как это предполагалось в домах-коммунах. Называя его так, Гинзбург имел в виду, что обитатели оценят удобства общественного обслуживания и постепенно перейдут к новому бытовому укладу.</p>
   <p>В отличие от домов-коммун в основе замысла Дома Наркомфина была идея создания комфортной жилой среды. Его структура намного богаче, чем структура многих других имевшихся тогда аналогов. Авторам проекта Гинзбургу и Милинису удалось скомпоновать жилые ячейки в единый корпус настолько необычно, что это заинтересовало даже самого <a target="_blank" href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B5_%D0%9A%D0%BE%D1%80%D0%B1%D1%8E%D0%B7%D1%8C%D0%B5">Ле Корбюзье</a>, побывавшего в Доме Наркомфина и посетившего лично квартиру Милютина.</p>
