--- a/posts.html
+++ b/posts.html
@@ -4,9 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-</head>
-<body>
+  <title>Wikimedium</title>
 
+<link rel="stylesheet" href="styles/style.css">
+
+</head>
+<body class="posts">
+<nav class="Menubar">
+  <a  class="logo"></a>
+  <a  class="about">О проекте</a>
+</nav>
+<section class="postFeed">
+  <a href="posts/narkomfin.html">
+    <figure style=" background-image: url(img/narkomfin.jpg);"></figure>
+    <h2>Дом Наркомфина</h2>
+    <p>Жилой дом переходного типа, построенный в 1930 году по проекту архитекторов Моисея Гинзбурга и Игнатия Милиниса для работников Народного комиссариата финансов СССР (Наркомфина). Находится в Москве на Новинском бульваре по адресу дом № 25, корпус 1. Дом Наркомфина является памятником архитектуры конструктивизма.</p>
+  </a>
+  <a href="posts/centrosouz.html">
+    <figure style=" background-image: url(img/centrosouz.jpg);"></figure>
+    <h2>Здание Центросоюза</h2>
+    <p>Офисное здание, возведённое в 1928—1936 годах в центре Москвы по проекту Ле Корбюзье, при участии П. Жаннере и Н. Я. Колли. Представляет собой комплекс корпусов, обращённый одновременно на две параллельные улицы — Мясницкую и проспект Академика Сахарова.</p>
+  </a>
+</section>
 </body>
 </html>
