--- a/landing.html
+++ b/landing.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>wikimedium.hack.exchange</title>
   <link rel="stylesheet" href="styles/style.css">
-  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
-  <link rel="icon" type="image/png" href="img/favicon.png">
+  <link rel="icon" type="image/x-icon" href="../img/favicon.ico">
+  <link rel="icon" type="image/png" href="../img/favicon.png">
 </head>
 <body class="landing">
   <nav class="Menubar">
@@ -16,9 +16,7 @@
   </nav>
     <div class="one_page">
       <div class="text">
-        <h2>Наглядный пример,
-          <br>
-          чтобы учиться веб-вёрстке.</h2>
+        <h2>Наглядный&nbsp;пример, чтобы учиться веб-вёрстке.</h2>
         <p>Проект, разработанный командой Hæd Exchange, для обучения основам веб-вёрстки в рамках образовательного проекта Hack Exchange.</p>
         <figure></figure>
       </div>
@@ -27,8 +25,7 @@
     <div class="one_page">
       <div class="img ipad"></div>
       <div class="text">
-        <h2>С нуля до первого сайта
-          <br> под компьютеры, смартфоны и планшеты.</h2>
+        <h2>С нуля до первого&nbsp;сайта под компьютеры, смартфоны и планшеты.</h2>
         <p>Чтобы начать изучать веб-вёрстку на этом проекте не требуется каких-то специальных знаний, кроме базового умения пользоваться компьютером.</p>
         <figure></figure>
       </div>
@@ -42,11 +39,8 @@
       <div class="img site"></div>
     </div>
     <div class="action">
-      <h2>Возможность самостоятельного
-        <br> и курируемого обучения.</h2>
-      <p>Вы можете обучаться самостоятельно по исходному коду проекта,
-        <br> выложенному на GitHub, или записаться на курс “Основы
-        <br> веб-вёрстки с Захаром Днём” на Hack Exchange.</p>
+      <h2>Возможность самостоятельного&nbsp;и курируемого обучения.</h2>
+      <p>Вы можете обучаться самостоятельно по исходному коду&nbsp;проекта,выложенному на GitHub, или записаться на&nbsp;курс “Основы веб-вёрстки с Захаром Днём” на Hack Exchange.</p>
       <nav>
         <a href="" class="button left">Исходный код на GitHub</a>
         <a href="" class="button right">Курс на Hack Exchange</a>
